<resources>
    <string name="app_name">My ApplicationDIA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="name_user">Олександр</string>
    <string name="saveButton">Сохранить</string>
    <string name="cancelButton">Отмена</string>
    <string name="hintPass">Пароль</string>
    <string name="enterPass">Введіть пароль</string>
    <string name="signIn">Увійти</string>
    <string name="signUp">Зареєструватись</string>

    <string-array name="name_of_services">
        <item>Допомога</item>
        <item>Сертификат</item>
        <item>Опитування</item>
        <item>Пошкоджене майно</item>
        <item>єПідтримка</item>
        <item>Оформлення допомоги для ВПО</item>
        <item>Допомога по безробіттю</item>
        <item>Дія ТВ</item>
        <item>Дія Радіо</item>
        <item>Податки ФОП</item>
        <item>Довідки</item>
        <item>Виконавчі провадження</item>
    </string-array>

    <string-array name="name_of_menu">
        <item>Підключені пристрої</item>
        <item>Дія. Підпис</item>
        <item>Функції та підказки</item>
        <item>Питання та відповіді</item>
        <item>Служба підтримки</item>
        <item>Копіювати номер пристрою</item>
        <item>Налаштування</item>
        <item>Про Дію</item>
        <item>Розповісти друзям</item>
        <item>Оновити застосунок</item>
        <item>Повідомлення про обробку персональних даних</item>
        <item>Ввести данні</item>
        <item>Вийти</item>
    </string-array>
</resources>